--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,40 @@
 body {
   margin: 0;
-  overflow: hidden; /* Deshabilita el scroll */
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Altura igual al viewport */
+  height: 100vh;
   background: linear-gradient(135deg, #ff9a9e 0%, #dba191 55%, #d857b3 100%);
-  font-family: 'Pacifico', cursive; /* Fuente más estilizada */
+  font-family: 'Pacifico', cursive;
 }
 
 .container {
-  text-align: center; /* Centra el contenido del texto */
+  text-align: center;
 }
 
 h1 {
-  margin: 0 0 20px 0; /* Espaciado solo debajo del título */
-  font-size: 3rem; /* Tamaño más grande */
+  margin: 0 0 20px 0;
+  font-size: 3rem;
   color: rgb(202, 77, 125);
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); /* Sombra para dar énfasis */
-  letter-spacing: 3px; /* Espaciado entre letras */
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  letter-spacing: 3px;
 }
 
 .juego {
   display: flex;
-  flex-direction: column; /* Contenedor en columna para incluir texto y cartas */
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 30px;
-  background-color: rgba(255, 255, 255, 0.8); /* Fondo con opacidad */
-  border-radius: 20px; /* Bordes redondeados más pronunciados */
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); /* Sombra suave */
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 20px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
 }
 
 .cartas {
   display: grid;
-  grid-template-columns: repeat(4, 120px); /* Cartas más pequeñas */
+  grid-template-columns: repeat(4, 120px);
   grid-gap: 20px;
   padding: 10px;
   justify-items: center;
@@ -47,13 +47,13 @@ h1 {
   cursor: pointer;
   transition: transform 0.6s ease-in-out, box-shadow 0.3s ease-in-out;
   border-radius: 10px;
-  position: relative; /* Necesario para contener las caras */
-  background: linear-gradient(135deg, #f7c1e0, #f79c42); /* Degradado suave que combina con el fondo */
+  position: relative;
+  background: linear-gradient(135deg, #f7c1e0, #f79c42);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 .carta:hover {
-  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2); /* Efecto hover más pronunciado */
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
 }
 
 .carta .cara {
@@ -65,7 +65,7 @@ h1 {
   justify-content: center;
   align-items: center;
   border-radius: 10px;
-  transition: transform 0.6s ease-in-out; /* Animación de giro */
+  transition: transform 0.6s ease-in-out;
 }
 
 .carta .frontal {
@@ -74,15 +74,15 @@ h1 {
 
 .carta .trasera {
   background-color: #ffcc00;
-  transform: rotateY(180deg); /* Inicialmente girada 180 grados */
+  transform: rotateY(180deg);
 }
 
 .carta.girada .frontal {
-  transform: rotateY(180deg); /* Gira la frontal a 180 grados */
+  transform: rotateY(180deg);
 }
 
 .carta.girada .trasera {
-  transform: rotateY(0); /* Gira la trasera a su posición original */
+  transform: rotateY(0);
 }
 
 .carta img {
